feat: release FinGrind 0.62.0